# rhai-console

./: Cargo.toml  MIT-LICENSE  README.md  justfile
.github/workflows/: test.yml
examples/: demo.rs
src/: cli.rs  color.rs  console.rs  directives.rs  engine.rs  error.rs  lib.rs  macros.rs  print.rs  repl.rs  script.rs  trace.rs
tests/: console.rs  error.rs  macros.rs  print.rs  script.rs  trace.rs
